--- a/app/globals.css
+++ b/app/globals.css
@@ -4,97 +4,53 @@
 @import url('./markdown.css');
 @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Pacifico&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Playwrite+AU+NSW:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 20 14.3% 4.1%;
-    --card: 0 0% 100%;
-    --card-foreground: 20 14.3% 4.1%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 20 14.3% 4.1%;
-    --primary: 47.9 95.8% 53.1%;
-    --primary-foreground: 26 83.3% 14.1%;
-    --secondary: 60 4.8% 95.9%;
-    --secondary-foreground: 24 9.8% 10%;
-    --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 44.7%;
-    --accent: 60 4.8% 95.9%;
-    --accent-foreground: 24 9.8% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 60 9.1% 97.8%;
-    --border: 20 5.9% 90%;
-    --input: 20 5.9% 90%;
-    --ring: 20 14.3% 4.1%;
+  :root,
+  .light {
+    --background: #ffffff;
+    --foreground: #0e0e10;
+    --card: #ffffff;
+    --card-foreground: #0e0e10;
+    --popover: #ffffff;
+    --popover-foreground: #0e0e10;
+    --primary: #f9d93a;
+    --primary-foreground: #3a2c24;
+    --secondary: #f3f3f4;
+    --secondary-foreground: #1e1e1f;
+    --muted: #f3f3f4;
+    --muted-foreground: #404457;
+    --accent: #f3f3f4;
+    --accent-foreground: #1e1e1f;
+    --destructive: #f43b4a;
+    --destructive-foreground: #f8fafb;
+    --border: #e5e7eb;
+    --input: #e5e7eb;
+    --ring: #0e0e10;
+    --analytics-banner:#3b82f6;
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 1 0% 9%;
-    --foreground: 60 9.1% 97.8%;
-    --card: 20 14.3% 4.1%;
-    --card-foreground: 60 9.1% 97.8%;
-    --popover: 20 14.3% 4.1%;
-    --popover-foreground: 60 9.1% 97.8%;
-    --primary: 47.9 95.8% 53.1%;
-    --primary-foreground: 26 83.3% 14.1%;
-    --secondary: 12 6.5% 15.1%;
-    --secondary-foreground: 60 9.1% 97.8%;
-    --muted: 12 6.5% 15.1%;
-    --muted-foreground: 0 0% 83%;
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 60 9.1% 97.8%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 60 9.1% 97.8%;
-    --border: 12 6.5% 15.1%;
-    --input: 12 6.5% 15.1%;
-    --ring: 35.5 91.7% 32.9%;
-  }
-  .red{
-    --background: 346.8 77.2% 49.8%;
-    --foreground: 346.8 77.2% 49.8%;
-    --card: 0 0% 100%;
-    --card-foreground: 346.8 77.2% 49.8%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 346.8 77.2% 49.8%;
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 346.8 77.2% 49.8%;
-    --radius: 0.5rem;
-  }
- 
-  .blue{
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --primary: 221.2 83.2% 53.3%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 221.2 83.2% 53.3%;
-    --radius: 0.5rem;
+    --background: #1a1a1a;
+    --foreground: #f4f7f9;
+    --card: #0e0e10;
+    --card-foreground: #f4f7f9;
+    --popover: #0e0e10;
+    --popover-foreground: #f4f7f9;
+    --primary: #dfa207;
+    --primary-foreground: #3b2924;
+    --secondary: #202328;
+    --secondary-foreground: #f4f7f9;
+    --muted: #202328;
+    --muted-foreground: #d5d5d5;
+    --accent: #202328;
+    --accent-foreground: #f4f7f9;
+    --destructive: #8c3e24;
+    --destructive-foreground: #f4f7f9;
+    --border: #202328;
+    --input: #202328;
+    --ring: #dfa207;
   }
 }
-
 .editor textarea{
   resize: none;
   
